<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="realtimechat_default_acl_key">ACL_SETTING_ANYONE</string>
    <string name="realtimechat_acl_key">com.google.android.apps.circles.realtimechat.ACL</string>
    <string name="debug_realtimechat_default_backend">realtime-chat-canary@bot.talk.google.com</string>
    <string name="realtimechat_default_backend">realtime-chat@bot.talk.google.com</string>
    <string name="realtimechat_backend_key">com.google.android.apps.circles.realtimechat.BACKEND</string>
    <string name="communication_preference_notifications_key">notifications_preference</string>
    <string name="communication_preference_messenger_key">messenger_preference</string>
    <string name="communication_preference_hangout_key">hangout_preference</string>
    <string name="notifications_preference_enabled_key">notifications_enabled</string>
    <string name="notifications_preference_vibrate_key">notifications_vibrate</string>
    <string name="notifications_preference_ringtone_key">notifications_ringtone</string>
    <string name="notifications_preference_ringtone_default_value">content://settings/system/notification_sound</string>
    <string name="realtimechat_ringtone_setting_key">realtimechat_ringtone</string>
    <string name="realtimechat_notify_setting_key">realtimechat_notify</string>
    <string name="realtimechat_vibrate_setting_key">realtimechat_vibrate</string>
    <string name="hangout_ringtone_setting_key">hangout_ringtone_1</string>
    <string name="hangout_notify_setting_key">hangout_notify</string>
    <string name="hangout_vibrate_setting_key">hangout_vibrate</string>
    <string name="hangout_ringtone_setting_default_value">content://settings/system/ringtone</string>
    <string name="photo_instant_upload_preference_key">photo_instant_upload</string>
    <string name="photo_connection_preference_key">photo_connection</string>
    <string name="photo_sync_preference_key">photo_sync</string>
    <string name="photo_roaming_upload_preference_key">photo_roaming</string>
    <string name="photo_on_battery_preference_key">photo_on_battery</string>
    <string name="video_connection_preference_key">video_connection</string>
    <string name="photo_upload_size_preference_key">upload_size</string>
    <string name="photo_buy_quota_preference_key">buy_quota</string>
    <string name="photo_learn_more_preference_key">learn_more</string>
    <string name="photo_connection_preference_default_value">WIFI_ONLY</string>
    <string name="video_connection_preference_default_value">WIFI_ONLY</string>
    <string name="photo_upload_size_preference_default_value">FULL</string>
    <string name="photo_preference_instant_upload_key">instant_upload</string>
    <string name="license_preference_key">license_key</string>
    <string name="privacy_policy_preference_key">privacy_key</string>
    <string name="terms_of_service_preference_key">terms_key</string>
    <string name="remove_account_preference_key">remove_account_key</string>
    <string name="oob_instant_upload_info">Instant Upload stores your photos and videos in a private album on Google+. You decide whether to share them later.</string>
    <string name="oob_instant_upload_option_wifi_and_mobile">Over Wi-Fi or mobile network</string>
    <string name="oob_instant_upload_option_wifi_only">Over Wi-Fi only</string>
    <string name="oob_instant_upload_option_disable">Turn off Instant Upload</string>
    <string name="oob_instant_upload_disclaimer">Uploading over a mobile network will use your data connection and may cost you money. Turn this off at any time in Settings.</string>
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_feedback">Send feedback</string>
    <string name="menu_home_sign_out">Sign out</string>
    <string name="menu_home_help">Help</string>
    <string name="menu_home_privacy_policy">Privacy policy</string>
    <string name="menu_home_terms_of_service">Terms of service</string>
    <string name="menu_refresh_photo">Refresh</string>
    <string name="menu_select_item">Select items</string>
    <string name="menu_delete_photo">Delete photo</string>
    <string name="menu_remove_tag">Remove name tag</string>
    <string name="menu_report_photo">Report abuse</string>
    <string name="communication_preference_notifications_button">Notifications</string>
    <string name="communication_preference_messenger_button">Messenger</string>
    <string name="communication_preference_hangout_button">Hangouts</string>
    <string name="notifications_preference_enabled_title">Google+ notifications</string>
    <string name="notifications_preference_enabled_summary">Show when notifications are received</string>
    <string name="notifications_preference_vibrate_title">Vibrate</string>
    <string name="notifications_preference_ringtone_title">Ringtone</string>
    <string name="notifications_preference_ringtone_summary">Set a ringtone for new notifications</string>
    <string name="photo_preference_category">Photos &amp; Videos</string>
    <string name="photo_preference_instant_upload_button">Instant Upload</string>
    <string name="photo_instant_upload_preference_title">Turn on Instant Upload</string>
    <string name="photo_instant_upload_preference_summary">Automatically upload new photos and videos to a private album on Google+</string>
    <string name="photo_roaming_upload_preference_title">Roaming uploads</string>
    <string name="photo_roaming_upload_preference_summary">Upload photos &amp; videos when roaming on a data network</string>
    <string name="photo_on_battery_preference_title">Upload only when charging</string>
    <string name="photo_on_battery_preference_summary">Upload photos &amp; videos only when charger connected</string>
    <string name="photo_connection_preference_title">When to upload photos</string>
    <string name="photo_connection_preference_summary_wifi">Only when there is a Wi-Fi connection available</string>
    <string name="video_connection_preference_title">When to upload videos</string>
    <string name="video_connection_preference_summary_wifi">Only when there is a Wi-Fi connection available</string>
    <string name="photo_upload_size_preference_title">Set upload size</string>
    <string name="photo_upload_size_preference_summary_full_unknown">Full size (Could not determine storage space available)</string>
    <string name="photo_buy_quota_preference_title">Get more storage</string>
    <string name="photo_buy_quota_preference_summary">Purchase additional storage for full size uploads</string>
    <string name="photo_learn_more_preference_title">About Instant Upload</string>
    <string name="photo_learn_more_preference_summary">Learn more about storing photos with Google+</string>
    <string name="photo_sync_preference_title">Upload all</string>
    <string name="photo_sync_preference_summary">Upload all photos &amp; videos now (if connection settings allow)</string>
    <string name="realtimechat_settings_notify_title">Messenger notifications</string>
    <string name="realtimechat_settings_vibrate_title">Vibrate</string>
    <string name="realtimechat_settings_ringtone_title">Ringtone</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_checkin">Share your location</string>
    <string name="menu_postphoto">Share photos</string>
    <string name="menu_post">New post</string>
    <string name="menu_photo_share">Share photo</string>
    <string name="menu_add_plus_one">+1</string>
    <string name="menu_remove_plus_one">Remove +1</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_show_post_location">Map</string>
    <string name="menu_mute_post">Mute</string>
    <string name="menu_set_profile_photo">Set as profile photo</string>
    <string name="menu_set_wallpaper_photo">Set as wallpaper</string>
    <string name="menu_download_photo">Download image</string>
    <string name="menu_plus_oned_by">"+1'd by"</string>
    <string name="menu_delete_review">delete</string>
    <string name="realtimechat_conversation_edit_name_menu_item_text">Edit name</string>
    <string name="realtimechat_conversation_mute_menu_item_text">Mute</string>
    <string name="realtimechat_conversation_unmute_menu_item_text">Unmute</string>
    <string name="realtimechat_conversation_leave_menu_item_text">Leave</string>
    <string name="realtimechat_conversation_invite_menu_item_text">Add people</string>
    <string name="realtimechat_conversation_join_hangout_menu_item_text">@string/hangout_enter_greenroom</string>
    <string name="menu_item_mute_person">Mute</string>
    <string name="menu_item_unmute_person">Unmute</string>
    <string name="menu_item_block_person">Block</string>
    <string name="menu_item_unblock_person">Unblock</string>
    <string name="menu_item_report_abuse">Report abuse</string>
    <string name="menu_item_delete_post">Delete</string>
    <string name="menu_search_posts">Search posts</string>
    <string name="realtimechat_acl_settings_title">Who can add you to conversations</string>
    <string name="menu_delete_circle">Delete circle</string>
    <string name="about_preference_category">About</string>
    <string name="account_preference_category">Account Preferences</string>
    <string name="preferences_about_button">About Google+</string>
    <string name="preferences_build_version">Build version</string>
    <string name="preferences_license_title">Open source licenses</string>
    <string name="preferences_license_summary">License details for open source software</string>
    <string name="preferences_remove_account_title">Disable Google+</string>
    <string name="preferences_remove_account_description">Open a web page where you can delete your Google+ profile and content</string>
    <string name="hangout_avatar_menu_pin_video">Pin video</string>
    <string name="hangout_avatar_menu_unpin_video">Unpin video</string>
    <string name="hangout_avatar_menu_remote_mute">Mute</string>
    <string name="hangout_settings_notify_title">Hangout notifications</string>
    <string name="hangout_settings_vibrate_title">Vibrate</string>
    <string name="hangout_settings_ringtone_title">Ringtone</string>
    <string name="realtimechat_android_id_key">android_id</string>
    <string name="realtimechat_c2dm_registration_key">c2dm_registration_id</string>
    <string name="menu_invite_more">Invite more</string>
    <string name="menu_edit_event">Edit this event</string>
    <string name="menu_delete_event">Delete this event</string>
    <string name="profile_local_section_details">Details</string>
    <string name="menu_circle_settings">Circle settings</string>
</resources>