<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.galaxy.meetup.client">
    <Preference android:persistent="false" android:layout="@layout/label_preference" android:title="@string/photo_learn_more_preference_title" android:key="@string/photo_learn_more_preference_key" android:summary="@string/photo_learn_more_preference_summary" />
    <com.galaxy.meetup.client.settings.EsListPreference android:persistent="false" android:entries="@array/photo_upload_size_preference_entry_labels" android:layout="@layout/label_preference" android:title="@string/photo_upload_size_preference_title" android:key="@string/photo_upload_size_preference_key" android:summary="@string/photo_upload_size_preference_summary_full_unknown" android:defaultValue="@string/photo_upload_size_preference_default_value" android:entryValues="@array/photo_upload_size_preference_entry_values" app:entrySummaries="@array/photo_upload_size_preference_entry_summaries" />
    <Preference android:persistent="false" android:layout="@layout/label_preference" android:title="@string/photo_buy_quota_preference_title" android:key="@string/photo_buy_quota_preference_key" android:summary="@string/photo_buy_quota_preference_summary" />
    <CheckBoxPreference android:persistent="false" android:layout="@layout/label_preference" android:title="@string/photo_instant_upload_preference_title" android:key="@string/photo_instant_upload_preference_key" android:summary="@string/photo_instant_upload_preference_summary" android:defaultValue="@bool/photo_instant_upload_preference_default_value" />
    <ListPreference android:persistent="false" android:entries="@array/photo_connection_preference_entry_labels" android:layout="@layout/label_preference" android:title="@string/photo_connection_preference_title" android:key="@string/photo_connection_preference_key" android:summary="@string/photo_connection_preference_summary_wifi" android:defaultValue="@string/photo_connection_preference_default_value" android:entryValues="@array/photo_connection_preference_entry_values" />
    <ListPreference android:persistent="false" android:entries="@array/video_connection_preference_entry_labels" android:layout="@layout/label_preference" android:title="@string/video_connection_preference_title" android:key="@string/video_connection_preference_key" android:summary="@string/video_connection_preference_summary_wifi" android:defaultValue="@string/video_connection_preference_default_value" android:entryValues="@array/video_connection_preference_entry_values" />
    <CheckBoxPreference android:persistent="false" android:layout="@layout/label_preference" android:title="@string/photo_roaming_upload_preference_title" android:key="@string/photo_roaming_upload_preference_key" android:summary="@string/photo_roaming_upload_preference_summary" android:defaultValue="@bool/photo_roaming_upload_preference_default_value" />
    <CheckBoxPreference android:persistent="false" android:layout="@layout/label_preference" android:title="@string/photo_on_battery_preference_title" android:key="@string/photo_on_battery_preference_key" android:summary="@string/photo_on_battery_preference_summary" android:defaultValue="@bool/photo_on_battery_preference_default_value" />
    <Preference android:persistent="false" android:layout="@layout/label_preference" android:title="@string/photo_sync_preference_title" android:key="@string/photo_sync_preference_key" android:summary="@string/photo_sync_preference_summary" />
</PreferenceScreen>